46) Add support user specific tx rate of mcast pkt for igmp snooping (McastMcs=0..15 default 0).<br>
47) Fix restore backup settings.<br>
48) Move to kernel_rootfs nopadded mode. Economy ~64Kb not compressed flash.<br>
49) Fixed RWFS on mtd position at 2 blocks and of mtd device.<br>
50) Fix update firmware in nopadded kernel_rootfs mode.<br>
51) Fix profile settings at STA disconnected from AP.<br>
52) Add workaround for broadcom clients (WPA+dhcp).<br>
53) Add option 57 for dhcp support.<br>
54) Fix pptp/gre nat helpers support.<br>
55) Add module expressnat offload ported for independed conntrack. Need fix some bug in code.<br>
56) Fix crash goahead at ap get mac list (new driver add ApIdx in RT_802_11_MAC_ENTRY structure)<br>
57) Fix igmpproxy wan port select<br>
58) Some kernel code optimizations<br>
59) Update radvd to 1.7 version at Jan 12, 2011.<br>
60) More kernel/apps optimization and more clean build userlevel.<br>
61) Fix ip fragmentation.<br>
62) Not wait connect STA+PPPOE if PPPOE iface=lan.<br>
63) Update fib and net kernel subsystem.<br>
64) Memory subsystem speedup.<br>
65) Tune raether buffers size for improve performance.<br>
66) Random subsystem update and speedup.<br>
67) Correctly handle 64-bit values on 32-bit architectures.<br>
68) Fix replace route in ppp on dhcp renew and fiw rewrite dns from dhcp at renew.<br>
69) Add switch mode speed select in WebUI.<br>
70) Add bridge fastpath enable/disable in WebUI.<br>
71) Fix speed regression (non correct align at memalloc in dev.c).<br>
72) Fix ip timestamp issue.<br>
73) Small route speedup.<br>


<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://sadnet.ru">sadnet.ru - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>