@@ -449,6 +449,9 @@ enum
 #ifdef CONFIG_BRIDGE_FASTPATH
 	NET_TCP_ALLOWED_BRIDGE_FASTPATH=124,
 #endif
+#ifdef CONFIG_RAETH_DHCP_TOUCH
+	NET_TCP_SEND_SIGUSR_DHCPC=125,
+#endif
 };
 
 enum {
